--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.2",
+    "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.1",
     "@astrojs/tailwind": "^5.0.0",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "astro": "^3.1.4",
     "class-variance-authority": "^0.7.0",
