--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "astro dev"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.0.1",
     "@astrojs/react": "^3.0.3",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.1",
