change to lang route & fix main page

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/tailwind": "^5.0.2",
     "@astrojs/vercel": "^5.0.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "astro": "^3.3.2",
     "class-variance-authority": "^0.7.0",
