feat: Add Toast for the Tshirt Design

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "3.0.0-alpha.2",
+    "embla-carousel-autoplay": "8.0.0-rc19",
+    "embla-carousel-react": "8.0.0-rc19",
     "lucide-react": "^0.279.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
