refactor:Update Package and add scrollbar color

--- a/package.json
+++ b/package.json
@@ -14,48 +14,48 @@
     "start": "astro dev"
   },
   "dependencies": {
-    "@astrojs/node": "^8.0.0",
-    "@astrojs/partytown": "^2.0.4",
-    "@astrojs/react": "^3.0.9",
-    "@astrojs/rss": "^4.0.3",
-    "@astrojs/sitemap": "^3.0.5",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.0.1",
-    "@hookform/resolvers": "^3.3.2",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "astro": "^4.2.3",
-    "astro-compress": "^2.2.3",
-    "astro-robots-txt": "^1.0.0",
+    "@astrojs/node": "8.0.0",
+    "@astrojs/partytown": "2.0.4",
+    "@astrojs/react": "3.0.9",
+    "@astrojs/rss": "4.0.3",
+    "@astrojs/sitemap": "3.0.5",
+    "@astrojs/tailwind": "5.1.0",
+    "@astrojs/vercel": "7.0.1",
+    "@hookform/resolvers": "3.3.2",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-toast": "1.1.5",
+    "astro": "4.2.3",
+    "astro-compress": "2.2.3",
+    "astro-robots-txt": "1.0.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "2.0.0",
     "date-fns": "3.0.0-alpha.2",
     "embla-carousel-autoplay": "8.0.0-rc19",
     "embla-carousel-react": "8.0.0-rc19",
-    "lucide-react": "^0.279.0",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.9.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "resend": "^2.0.0",
-    "sharp": "^0.32.6",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "lucide-react": "0.279.0",
+    "react": "18.2.0",
+    "react-day-picker": "8.9.1",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.48.2",
+    "resend": "2.0.0",
+    "sharp": "0.32.6",
+    "tailwind-merge": "1.14.0",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.8.7",
-    "@types/react": "^18.2.29",
-    "@types/react-dom": "^18.2.13",
-    "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.0",
-    "prettier-plugin-tailwindcss": "^0.5.6"
+    "@tailwindcss/typography": "0.5.10",
+    "@types/node": "20.8.7",
+    "@types/react": "18.2.29",
+    "@types/react-dom": "18.2.13",
+    "prettier": "3.0.3",
+    "prettier-plugin-astro": "0.12.0",
+    "prettier-plugin-tailwindcss": "0.5.6"
   },
   "packageManager": "pnpm@8.8.0"
 }
