--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nano-fighters-club",
   "version": "2.1.01",
-  "description": "An Astro template for building apps.",
+  "description": "Combat Sports Coach Website",
   "author": {
     "name": "Adrian 'Nano' Alvarez"
   },
@@ -14,13 +14,13 @@
     "start": "astro dev"
   },
   "dependencies": {
-    "@astrojs/node": "8.2.3",
+    "@astrojs/node": "8.2.5",
     "@astrojs/partytown": "2.0.4",
-    "@astrojs/react": "3.0.10",
+    "@astrojs/react": "3.1.1",
     "@astrojs/rss": "4.0.5",
-    "@astrojs/sitemap": "3.1.1",
+    "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
-    "@astrojs/vercel": "7.3.4",
+    "@astrojs/vercel": "7.5.2",
     "@hookform/resolvers": "3.3.4",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-label": "2.0.2",
@@ -30,35 +30,35 @@
     "@radix-ui/react-toast": "1.1.5",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "astro": "4.4.11",
-    "astro-compress": "2.2.11",
+    "astro": "4.5.16",
+    "astro-compress": "2.2.22",
     "astro-robots-txt": "1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "2.1.0",
-    "date-fns": "3.3.1",
-    "embla-carousel-autoplay": "8.0.0",
-    "embla-carousel-react": "8.0.0",
-    "lucide-react": "0.344.0",
+    "date-fns": "3.6.0",
+    "embla-carousel-autoplay": "8.0.1",
+    "embla-carousel-react": "8.0.1",
+    "lucide-react": "0.365.0",
     "package": "^1.0.1",
     "react": "18.2.0",
     "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.51.0",
+    "react-hook-form": "7.51.2",
     "resend": "3.2.0",
-    "sharp": "0.33.2",
-    "tailwind-merge": "2.2.1",
-    "tailwindcss": "3.4.1",
+    "sharp": "0.33.3",
+    "tailwind-merge": "2.2.2",
+    "tailwindcss": "3.4.3",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "0.5.10",
-    "@types/node": "20.11.24",
-    "@types/react": "18.2.62",
-    "@types/react-dom": "18.2.19",
+    "@tailwindcss/typography": "0.5.12",
+    "@types/node": "20.12.5",
+    "@types/react": "18.2.74",
+    "@types/react-dom": "18.2.24",
     "prettier": "3.2.5",
     "prettier-plugin-astro": "0.13.0",
-    "prettier-plugin-tailwindcss": "0.5.11"
+    "prettier-plugin-tailwindcss": "0.5.13"
   },
-  "packageManager": "pnpm@8.8.0"
+  "packageManager": "pnpm@8.15.6"
 }
