refactor: Add alias import and fis Eslint/typescript issued fix #13, fix #15, fix #17

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   },
-  "include": ["./src/env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["./src/env.d.ts", "**/*.ts", "**/*.tsx", "**/*.astro"],
   "exclude": ["node_modules"]
 }
