--- a/package.json
+++ b/package.json
@@ -1,64 +1,65 @@
 {
-	"name": "nano-fighters-club",
-	"version": "2.1.01",
-	"description": "Combat Sports Coach Website",
-	"author": {
-		"name": "Adrian 'Nano' Alvarez"
-	},
-	"license": "MIT",
-	"scripts": {
-		"build": "astro build",
-		"dev": "astro dev",
-		"format": "prettier -w . --cache",
-		"preview": "astro preview",
-		"start": "astro dev"
-	},
-	"dependencies": {
-		"@astrojs/node": "8.2.5",
-		"@astrojs/partytown": "2.0.4",
-		"@astrojs/react": "3.1.1",
-		"@astrojs/rss": "4.0.5",
-		"@astrojs/sitemap": "3.1.2",
-		"@astrojs/tailwind": "5.1.0",
-		"@astrojs/vercel": "7.5.2",
-		"@hookform/resolvers": "3.3.4",
-		"@radix-ui/react-dialog": "1.0.5",
-		"@radix-ui/react-label": "2.0.2",
-		"@radix-ui/react-popover": "1.0.7",
-		"@radix-ui/react-select": "2.0.0",
-		"@radix-ui/react-slot": "1.0.2",
-		"@radix-ui/react-toast": "1.1.5",
-		"@vercel/analytics": "^1.2.2",
-		"@vercel/speed-insights": "^1.0.10",
-		"astro": "4.5.16",
-		"astro-compress": "2.2.22",
-		"astro-robots-txt": "1.0.0",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "2.1.0",
-		"date-fns": "3.6.0",
-		"embla-carousel-autoplay": "8.0.1",
-		"embla-carousel-react": "8.0.1",
-		"lucide-react": "0.365.0",
-		"package": "^1.0.1",
-		"react": "18.2.0",
-		"react-day-picker": "8.10.0",
-		"react-dom": "18.2.0",
-		"react-hook-form": "7.51.2",
-		"resend": "3.2.0",
-		"sharp": "0.33.3",
-		"tailwind-merge": "2.2.2",
-		"tailwindcss": "3.4.3",
-		"tailwindcss-animate": "1.0.7",
-		"zod": "3.22.4"
-	},
-	"devDependencies": {
-		"@tailwindcss/typography": "0.5.12",
-		"@types/node": "20.12.5",
-		"@types/react": "18.2.74",
-		"@types/react-dom": "18.2.24",
-		"prettier": "3.2.5",
-		"prettier-plugin-astro": "0.13.0",
-		"prettier-plugin-tailwindcss": "0.5.13"
-	},
-	"packageManager": "pnpm@9.1.2"
+  "name": "nano-fighters-club",
+  "version": "2.1.01",
+  "description": "Combat Sports Coach Website",
+  "author": {
+    "name": "Adrian 'Nano' Alvarez"
+  },
+  "license": "MIT",
+  "scripts": {
+    "build": "astro build",
+    "dev": "astro dev",
+    "format": "prettier -w . --cache",
+    "preview": "astro preview",
+    "start": "astro dev"
+  },
+  "dependencies": {
+    "@astrojs/node": "8.3.4",
+    "@astrojs/partytown": "2.1.2",
+    "@astrojs/react": "3.6.2",
+    "@astrojs/rss": "4.0.7",
+    "@astrojs/sitemap": "3.1.6",
+    "@astrojs/tailwind": "5.1.1",
+    "@astrojs/vercel": "7.8.1",
+    "@hookform/resolvers": "3.9.0",
+    "@playform/compress": "^0.1.1",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-toast": "1.2.1",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
+    "astro": "4.15.10",
+    "astro-font": "^0.1.81",
+    "astro-robots-txt": "1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
+    "embla-carousel-autoplay": "8.3.0",
+    "embla-carousel-react": "8.3.0",
+    "lucide-react": "0.446.0",
+    "package": "^1.0.1",
+    "react": "18.3.1",
+    "react-day-picker": "9.1.3",
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.53.0",
+    "resend": "4.0.0",
+    "sharp": "0.33.5",
+    "tailwind-merge": "2.5.2",
+    "tailwindcss": "3.4.13",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.23.8"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "0.5.15",
+    "@types/node": "22.7.4",
+    "@types/react": "18.3.10",
+    "@types/react-dom": "18.3.0",
+    "prettier": "3.3.3",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "0.6.8"
+  },
+  "packageManager": "pnpm@9.11.0"
 }
